Fixed ScrollBAr design Also Navbar Design

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,7 @@
 @import "./partials/mixins";
 @import "./loader";
 @import "./dashboard-counts";
+@import "./navbar";
 
 body {
   margin: 0px;
@@ -77,5 +78,25 @@ div {
         box-sizing: border-box;
       }
     }
+  }
+}
+
+* {
+  &::-webkit-scrollbar-track {
+    background-color: $fadedBlack;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar {
+    width: 10px;
+    @media (max-width: 1000px) {
+      width: 1px;
+    }
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    outline: none;
+    background-color: $lightgray;
   }
 }
